--- a/src/main/resources/static/ui/partials/menu/state_account.html
+++ b/src/main/resources/static/ui/partials/menu/state_account.html
@@ -84,6 +84,12 @@
                 style="margin-top: 2px;">
                 <li>
                     <a href=""
+                       ng-click="searchAccount({})"
+                       tooltip-append-to-body="true"
+                       uib-tooltip="تحديث">
+                        <img class="material-icons mdl-list__item-icon" ng-src="/ui/img/{{iconSet}}/refresh.{{iconSetType}}" width="24" height="24">
+                    </a>
+                    <a href=""
                        ng-click="openFilterAccount()"
                        tooltip-append-to-body="true"
                        uib-tooltip="بحث">
@@ -198,6 +204,10 @@
                                 <span>الباقي</span>
                             </th>
 
+                            <th>
+                                <span>تاريخ آخر سداد</span>
+                            </th>
+
                         </tr>
                         </thead>
                         <tbody>
@@ -237,15 +247,22 @@
                             <td>
                                 <span ng-show="dateType==='H'">{{account.registerDate | kdate: 'yyyy-mm-dd' : 'ar' : 'ummalqura'}}</span>
                                 <span ng-show="dateType==='G'">{{account.registerDate | date: 'yyyy-MM-dd'}}</span>
-                                <span>{{account.registerDate | date: 'hh:mm a'}}</span>
+                                <br/>
+                                <span class="label label-success">{{account.registerDate | date: 'hh:mm a'}}</span>
                             </td>
                             <td>{{account.net | currency:' ':2}}</td>
                             <td>{{account.paid | currency:' ':2}}</td>
                             <td>{{account.remain | currency:' ':2}}</td>
+                            <td>
+                                <span ng-show="dateType==='H'">{{account.lastPaymentDate | kdate: 'yyyy-mm-dd' : 'ar' : 'ummalqura'}}</span>
+                                <span ng-show="dateType==='G'">{{account.lastPaymentDate | date: 'yyyy-MM-dd'}}</span>
+                                <br/>
+                                <span class="label label-success">{{account.lastPaymentDate | date: 'hh:mm a'}}</span>
+                            </td>
                         </tr>
                         <tr class="blank_row no-print" style="height: 10px !important; background-color: #FFFFFF;"
                             ng-show="!accounts || accounts.length ==0">
-                            <td colspan="9">لا توجد بيانات</td>
+                            <td colspan="10">لا توجد بيانات</td>
                         </tr>
                         </tbody>
                     </table>
