--- a/src/main/resources/static/ui/partials/menu/state_menu.html
+++ b/src/main/resources/static/ui/partials/menu/state_menu.html
@@ -29,10 +29,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStateBranch()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_BRANCH_CREATE',
-             'ROLE_BRANCH_UPDATE',
-             'ROLE_BRANCH_DELETE'
-             ])">
+                             'ROLE_BRANCH_CREATE',
+                             'ROLE_BRANCH_UPDATE',
+                             'ROLE_BRANCH_DELETE'
+                             ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/branch.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -59,10 +59,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStateTeam()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_TEAM_CREATE',
-             'ROLE_TEAM_UPDATE',
-             'ROLE_TEAM_DELETE'
-             ])">
+                         'ROLE_TEAM_CREATE',
+                         'ROLE_TEAM_UPDATE',
+                         'ROLE_TEAM_DELETE'
+                         ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/team.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -76,10 +76,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStatePerson()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_PERSON_CREATE',
-             'ROLE_PERSON_UPDATE',
-             'ROLE_PERSON_DELETE'
-             ])">
+                         'ROLE_PERSON_CREATE',
+                         'ROLE_PERSON_UPDATE',
+                         'ROLE_PERSON_DELETE'
+                         ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/person.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -429,10 +429,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStateMaster()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_MASTER_CREATE',
-             'ROLE_MASTER_UPDATE',
-             'ROLE_MASTER_DELETE'
-             ])">
+                         'ROLE_MASTER_CREATE',
+                         'ROLE_MASTER_UPDATE',
+                         'ROLE_MASTER_DELETE'
+                         ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/master.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -446,10 +446,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStateOffer()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_OFFER_CREATE',
-             'ROLE_OFFER_UPDATE',
-             'ROLE_OFFER_DELETE'
-             ])">
+                         'ROLE_OFFER_CREATE',
+                         'ROLE_OFFER_UPDATE',
+                         'ROLE_OFFER_DELETE'
+                         ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/offer.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -463,10 +463,10 @@
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
                          ng-click="openStateCourse()"
                          ng-if="contains(me.team.authorities, [
-             'ROLE_COURSE_CREATE',
-             'ROLE_COURSE_UPDATE',
-             'ROLE_COURSE_DELETE'
-             ])">
+                         'ROLE_COURSE_CREATE',
+                         'ROLE_COURSE_UPDATE',
+                         'ROLE_COURSE_DELETE'
+                         ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/course.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
                         </div>
@@ -512,11 +512,11 @@
                     </div>
 
                     <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 parent text-center"
-                         ng-click="openStateContractPayment()"
+                         ng-click="openStateAccountPayment()"
                          ng-if="contains(me.team.authorities, [
-                             'ROLE_CONTRACT_PAYMENT_CREATE',
-                             'ROLE_CONTRACT_PAYMENT_UPDATE',
-                             'ROLE_CONTRACT_PAYMENT_DELETE'
+                             'ROLE_ACCOUNT_PAYMENT_CREATE',
+                             'ROLE_ACCOUNT_PAYMENT_UPDATE',
+                             'ROLE_ACCOUNT_PAYMENT_DELETE'
                              ])">
                         <div class="card-image mdl-card" style="background-image: url('/ui/img/{{iconSet}}/accountPayment.{{iconSetType}}')">
                             <div class="mdl-card__title mdl-card--expand"></div>
