--- a/src/main/resources/static/ui/partials/accountPayment/accountPaymentCreate.html
+++ b/src/main/resources/static/ui/partials/accountPayment/accountPaymentCreate.html
@@ -205,6 +205,7 @@
                                            min="1"
                                            class="form-control"
                                            placeholder="اجباري"
+                                           ng-change="accountPayment.vat=accountPayment.amount * selectedCompany.options.vatFactor"
                                            ng-model="accountPayment.amount">
                                 </div>
                             </div>
@@ -217,7 +218,7 @@
                                            type="number"
                                            class="form-control"
                                            readonly
-                                           value="{{accountPayment.amount * selectedCompany.options.vatFactor}}">
+                                           ng-model="accountPayment.vat">
                                 </div>
                             </div>
 
